--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
         <version>2.4.3</version>
     </parent>
 
-    <groupId>com.example</groupId>
-    <artifactId>spring-boot-initial</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>org.example</groupId>
+    <artifactId>marc-hartley-spring</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <name>character-planner-front-end</name>
     <description>REST API for tracking TBC characters</description>
