--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
     <description>REST API for tracking TBC characters</description>
 
     <properties>
-        <java.version>1.8</java.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
     <dependencies>
